After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760556 - rtspsrc: interleaved data and srtp don't play well together
rtspsrc: interleaved data and srtp don't play well together
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.6.2
Other Linux
: Normal normal
: 1.6.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-12 22:01 UTC by Aleix Conchillo Flaqué
Modified: 2016-01-18 14:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
follow stream profile when setting rtcp caps (1.27 KB, patch)
2016-01-12 22:06 UTC, Aleix Conchillo Flaqué
committed Details | Review

Description Aleix Conchillo Flaqué 2016-01-12 22:01:21 UTC
When using RTSP with interleaved data (protocols=tcp) in conjunction with SRTP, rtspsrc doesn't work (see at the end).

This could be solved by just disabling SRTP. If you have SRTP it probably means you also encrypt the RTSP channel, so there's no point on having additional encryption.

But, in any case, this should still work.

----

$ gst-launch-1.0 rtspsrc location=rtsps://localhost:8554/webcam latency=300 protocols=tcp tls-validation-flags=0 ! decodebin ! fakesink silent=false -v

Gives these error message:

ERROR: from element /GstPipeline:pipeline0/GstRTSPSrc:rtspsrc0: Internal data flow error.
Additional debug info:
gstrtspsrc.c(5483): gst_rtspsrc_loop (): /GstPipeline:pipeline0/GstRTSPSrc:rtspsrc0:
streaming task paused, reason not-negotiated (-4)
Comment 1 Aleix Conchillo Flaqué 2016-01-12 22:06:44 UTC
Created attachment 318925 [details] [review]
follow stream profile when setting rtcp caps
Comment 2 Sebastian Dröge (slomo) 2016-01-18 09:31:07 UTC
commit 665d14a2a0e741c5b6153fce0b0a03ad93ea7968
Author: Aleix Conchillo Flaqué <aconchillo@gmail.com>
Date:   Tue Jan 12 14:01:21 2016 -0800

    rtspsrc: handle rtcp/srtcp caps properly when using interleaved data
    
    We check the stream profile and use the proper RTCP caps:
    application/x-srtcp if we are using a secure profile and
    application/x-rtcp otherwise.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=760556